--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -26,9 +26,12 @@
     transform: translate(-50%, -50%);
     text-align: center;
 
-    #name{
+    #name {
       @include text($heading-font-family, 72px, 300, 1.2, -0.5px, none);
+      position: relative;
       color: $color-on-base;
+
+      @include glitch-text($color-on-base, $color-base, 10px);
     }
 
     span {
