--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 
 @import "base/typeface";
 @import "base/keyframes";
+@import "base/transition";
 
 @import "layouts/base";
 @import "layouts/header";
