Flicker animation on button

--- a/src/scss/base/_keyframes.scss
+++ b/src/scss/base/_keyframes.scss
@@ -29,19 +29,6 @@
   }
 }
 
-// Background color that moves like VHS scan lines
-@include keyframes(gradient-move) {
-  0% {
-    background-size: 100% 6px;
-  }
-  50% {
-    background-size: 100% 2px;
-  }
-  100% {
-    background-size: 100% 6px;
-  }
-}
-
 // Text that glitches out
 @include keyframes(glitch-text-animation) {
   $steps: 20;
@@ -49,5 +36,33 @@
     #{percentage($i * (1 / $steps))} {
       clip: rect(random(100) + px, 9999px, random(100) + px, 0);
     }
+  }
+}
+
+// Flicker animation
+@include keyframes(flicker-color-accent) {
+  $outline: rgba($color-accent-dark, 0.4);
+
+  0%,
+  19.999%,
+  22%,
+  62.999%,
+  64%,
+  64.999%,
+  70%,
+  100% {
+    opacity: 1;
+    box-shadow: -1px -1px 0 $outline, 1px -1px 0 $outline, -1px 1px 0 $outline, 1px 1px 0 $outline, 0 -2px 8px, 0 0 2px,
+      0 0 5px $color-accent, 0 0 15px $color-accent-dark, 0 0 2px $color-accent, 0 2px 3px #000;
+  }
+
+  20%,
+  21.999%,
+  63%,
+  63.999%,
+  65%,
+  69.999% {
+    opacity: 0.4;
+    box-shadow: none;
   }
 }
