--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -27,10 +27,9 @@
     text-align: center;
 
     #name {
-      @include text($heading-font-family, 72px, 300, 1.2, -0.5px, none);
       position: relative;
       color: $color-on-base;
-
+      @include text($heading-font-family, 72px, 400, 1.2, -0.5px);
       @include glitch-text($color-on-base, $color-base, 10px);
     }
 
