--- a/src/scss/layouts/_base.scss
+++ b/src/scss/layouts/_base.scss
@@ -8,7 +8,7 @@ body {
 
 #content {
   position: relative;
-  height: $content-height;
+  min-height: $content-height;
   margin-top: 56px;
   overflow: auto;
 }
