Home background image now flickers

--- a/src/scss/base/_keyframes.scss
+++ b/src/scss/base/_keyframes.scss
@@ -39,7 +39,32 @@
   }
 }
 
-// Flicker animation
+// Image flicker animation
+@mixin flicker-image($name, $image-1, $image-2, $image-1-filter: none, $image-2-filter: none) {
+  @include keyframes($name) {
+    0%,
+    19%,
+    22%,
+    62%,
+    64%,
+    70%,
+    100% {
+      background-image: $image-1;
+      filter: $image-1-filter;
+    }
+
+    20%,
+    21%,
+    63%,
+    65%,
+    69% {
+      background-image: $image-2;
+      filter: $image-2-filter;
+    }
+  }
+}
+
+// flicker animation
 @include keyframes(flicker-accent) {
   $outline: rgba($color-accent-dark, 0.4);
 
