--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -16,7 +16,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: url("../assets/img/home/logo-border-accent.png") center/contain;
+    background: center/cover;
     opacity: 0.08;
 
     @include flicker-image(
