--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -13,10 +13,14 @@ button {
   cursor: pointer;
   transition: 0.2s;
 
-  &:hover {
+  &.fill:hover {
+    color: $color-on-accent;
+    background-color: $color-accent;
+  }
+
+  &.neon:hover {
     text-shadow: 0 0 1px $color-accent, 0 0 3px $color-accent-dark;
-    box-shadow:
-      0 0 5px $color-accent, 0 0 10px $color-accent-dark, 0 0 2px $color-accent, inset 0 0 5px $color-accent,
+    box-shadow: 0 0 5px $color-accent, 0 0 10px $color-accent-dark, 0 0 2px $color-accent, inset 0 0 5px $color-accent,
       inset 0 0 10px $color-accent-dark, inset 0 0 2px $color-accent;
   }
 }
