Set page content div

--- a/src/scss/layouts/_base.scss
+++ b/src/scss/layouts/_base.scss
@@ -12,3 +12,9 @@ body {
   margin-top: 56px;
   overflow: auto;
 }
+
+.page {
+  min-height: $content-height;
+  margin: 0 20vw;
+  overflow: auto;
+}
