--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -39,9 +39,8 @@
 
     #name {
       position: relative;
-      color: $color-on-base;
-      @include text($heading-font-family, 76px, 400, 1.2, -0.5px);
-      @include glitch-text($color-on-base, $color-base, 12px);
+      @include text($heading-font-family, 72px, 400, 1.2, -0.5px, none, $color-on-base);
+      @include glitch-text($color-on-base, $color-base, 10px);
     }
 
     span {
