--- a/src/scss/pages/_not-found.scss
+++ b/src/scss/pages/_not-found.scss
@@ -3,11 +3,7 @@
 // ---------------------------------------------------------------------------
 
 #not-found {
-  display: inline-block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  @include absolute-center;
   text-align: center;
 
   #code {
