Moved overlapping glitch-text attributes

--- a/src/scss/base/_typeface.scss
+++ b/src/scss/base/_typeface.scss
@@ -56,6 +56,9 @@ h2 {
 }
 
 @mixin glitch-text($color, $background-color, $top-padding: 0, $left-padding: 0, $offset: 1px) {
+  position: relative;
+  color: $color;
+
   &:before {
     @extend %glitch-text-pseudo-element;
     top: $top-padding + $offset;
