--- a/src/scss/base/_typeface.scss
+++ b/src/scss/base/_typeface.scss
@@ -2,6 +2,7 @@
 // Contains everything to do with typeface (headline, body, caption, etc.)
 // ---------------------------------------------------------------------------
 
+// General text mixin
 @mixin text(
   $font-family,
   $font-size,
