--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -9,6 +9,7 @@ header {
   position: fixed;
   display: flex;
   align-items: center;
+  height: $header-height;
   width: 100%;
   top: 0;
   padding: 0 22vw;
