--- a/src/scss/base/_transition.scss
+++ b/src/scss/base/_transition.scss
@@ -7,7 +7,7 @@
 // -enter-active/leave-active: Active state of entering/leaving object (Persists throughout the entire phase)
 
 // Page transitions (Page slides in on top of previous page)
-%page-transition {
+%page-transition-active {
   position: fixed;
   min-height: $content-height;
   width: 100%;
@@ -24,21 +24,23 @@
     }
 
     &-active {
-      @extend %page-transition;
+      @extend %page-transition-active;
       @include transition(transform 0.4s ease-in-out);
     }
   }
 
   &-leave-active {
-    @extend %page-transition;
+    @extend %page-transition-active;
     opacity: 0;
   }
 }
 
-.page-slide-left {
+// Page slides from right-to-left
+.page-slide-ltr {
   @include page-slide-transition(100%);
 }
 
-.page-slide-right {
+// Page slides from left-to-right
+.page-slide-rtl {
   @include page-slide-transition(-100%);
 }
