--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -3,20 +3,21 @@
 // ---------------------------------------------------------------------------
 
 button {
-  position: relative;
   padding: 8px 36px;
   border: 1px solid $color-accent;
-  @include text(inherit, inherit, inherit, inherit, 2px, uppercase, $color-accent); // Fonts need to be inherited
   outline: none;
   background-color: transparent;
+  @include text(inherit, inherit, inherit, inherit, 2px, uppercase, $color-accent); // Fonts need to be inherited
   cursor: pointer;
   transition: 0.2s;
 
+  // Fills in button when hovered
   &.fill:hover {
     color: $color-on-accent;
     background-color: $color-accent;
   }
 
+  // Button glows when hovered
   &.neon:hover {
     text-shadow: 0 0 1px $color-accent, 0 0 3px $color-accent-dark;
     box-shadow: 0 0 5px $color-accent, 0 0 10px $color-accent-dark, 0 0 2px $color-accent, inset 0 0 5px $color-accent,
