--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -9,7 +9,6 @@ header {
   position: fixed;
   display: flex;
   align-items: center;
-  height: $header-height;
   width: 100%;
   top: 0;
   padding: 0 22vw;
@@ -82,6 +81,7 @@ header {
     @include breakpoint($breakpoint-small) {
       max-height: 0;
       margin-top: 56px;
+      margin-left: 0;
       overflow: hidden;
       @include transition(max-height 0.5s ease-in-out);
     }
@@ -94,6 +94,7 @@ header {
         display: inline-block;
         padding: 12px 8px;
         color: $color-on-base;
+        text-align: center;
         cursor: pointer;
 
         @include breakpoint($breakpoint-small) {
