Moved layout/base to base/content

--- a/src/scss/base/_content.scss
+++ b/src/scss/base/_content.scss
@@ -1,8 +1,7 @@
 // ---------------------------------------------------------------------------
-// Contains site-wide layout styles
+// Contains site-wide content styles
 // ---------------------------------------------------------------------------
 
-// The outermost div
 body {
   margin: 0;
 }
