Created a basic structure file

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import "abstract/mixins";
 
 @import "base/content";
+@import "base/structure";
 @import "base/typeface";
 @import "base/keyframes";
 @import "base/transition";
