--- a/src/scss/base/_animation.scss
+++ b/src/scss/base/_animation.scss
@@ -2,6 +2,15 @@
 // Contains general keyframes (for animation)
 // ---------------------------------------------------------------------------
 
+// Animation mixin
+@mixin animation($args) {
+  animation: $args;
+  -webkit-animation: $args;
+  -moz-animation: $args;
+  -ms-animation: $args;
+  -o-animation: $args;
+}
+
 // Mixin for keyframes
 @mixin keyframes($keyframes-name) {
   @keyframes #{$keyframes-name} {
