--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,7 +7,7 @@
 @import "base/content";
 @import "base/structure";
 @import "base/typeface";
-@import "base/keyframes";
+@import "base/animation";
 @import "base/transition";
 
 @import "layouts/header";
