base/content -> container

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,7 @@
 @import "abstract/functions";
 @import "abstract/mixins";
 
-@import "base/content";
+@import "base/container";
 @import "base/structure";
 @import "base/typeface";
 @import "base/animation";
