--- a/src/scss/base/_container.scss
+++ b/src/scss/base/_container.scss
@@ -1,7 +1,8 @@
 // ---------------------------------------------------------------------------
-// Contains site-wide content styles
+// Contains styles for containers of varying sizes
 // ---------------------------------------------------------------------------
 
+// Outermost container
 body {
   margin: 0;
 }
@@ -14,7 +15,7 @@ body {
   overflow: auto;
 }
 
-// The default page (what's within the router-page) [excludes home page]
+// The default page container (what's within the router-page) [excludes home page]
 .page {
   min-height: $content-height;
   margin: 0 24vw;
