--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,7 @@
 @import "abstract/mixins";
 
 @import "base/container";
-@import "base/structure";
+@import "base/elements";
 @import "base/typeface";
 @import "base/animation";
 @import "base/transition";
