--- a/src/scss/base/_elements.scss
+++ b/src/scss/base/_elements.scss
@@ -1,3 +1,3 @@
 // ---------------------------------------------------------------------------
-// Contains basic structures
+// Contains basic styles for the base elements
 // ---------------------------------------------------------------------------
