Experience CSS done

--- a/src/scss/base/_elements.scss
+++ b/src/scss/base/_elements.scss
@@ -1,3 +1,7 @@
 // ---------------------------------------------------------------------------
 // Contains basic styles for the base elements
 // ---------------------------------------------------------------------------
+
+ul {
+  margin: 0;
+}
