--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @import "abstract/variables";
 @import "abstract/functions";
 @import "abstract/mixins";
+@import "abstract/placeholders";
 
 @import "base/container";
 @import "base/elements";
