--- a/src/scss/abstract/_mixins.scss
+++ b/src/scss/abstract/_mixins.scss
@@ -39,12 +39,11 @@
 @mixin no-decoration-ul {
   padding: 0;
   margin: 0;
-  overflow: hidden;
   list-style-type: none;
 }
 
 // Pseudo-border(-top/-bottom) that expands and contracts from the center
-@mixin shutter-border-vertical($height, $top, $width: 0) {
+@mixin shutter-border-horizontal($height, $top, $width: 0) {
   content: "";
   position: absolute;
   height: $height;
