--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -3,8 +3,10 @@
 // ---------------------------------------------------------------------------
 
 #about {
+  margin-bottom: 120px;
+
   h1 {
-    margin-top: 76px;
+    margin-top: 120px;
   }
 
   #intro {
@@ -12,8 +14,68 @@
     align-items: center;
 
     img {
-	  max-width: 360px;
-	  margin-left: 52px;
+      max-width: 320px;
+      margin-left: 52px;
+    }
+  }
+
+  #experience {
+    margin-top: 100px;
+
+    &-content {
+      position: relative;
+      display: flex;
+    }
+
+    #timeline {
+      @include no-decoration-ul;
+      height: 400px;
+      min-width: 220px;
+      margin: 0 12px;
+      border-left: 1px solid $color-on-background;
+
+      li {
+        position: relative;
+        margin: 12px;
+        cursor: pointer;
+        @include transition(margin-left 0.2s ease-in-out);
+
+        &:before {
+          content: "";
+          position: absolute;
+          height: 6px;
+          width: 6px;
+          top: 50%;
+          left: -16px;
+          transform: translateY(-50%);
+          background-color: $color-background;
+          border: 1px solid $color-on-background;
+          border-radius: 50%;
+          @include transition(left 0.2s ease-in-out);
+        }
+      }
+
+      .active {
+        margin-left: 24px;
+        color: $color-accent;
+
+        &:before {
+          border-color: $color-accent;
+          left: -28px;
+        }
+      }
+    }
+
+    #details {
+      padding: 4px 0;
+
+      #dates {
+        font-size: 16px;
+      }
+
+      p {
+        margin-top: 1rem;
+      }
     }
   }
 }
