--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -3,10 +3,8 @@
 // ---------------------------------------------------------------------------
 
 #about {
-  margin-bottom: 120px;
-
-  h1 {
-    margin-top: 120px;
+  &-content {
+    margin: 120px 24vw;
   }
 
   #intro {
