About experience responsiveness

--- a/src/scss/abstract/_mixins.scss
+++ b/src/scss/abstract/_mixins.scss
@@ -42,6 +42,32 @@
   list-style-type: none;
 }
 
+// Horizontal selector of items
+@mixin horizontal-selector {
+  padding: 0;
+  margin: 0 0 16px;
+  overflow: auto;
+  white-space: nowrap;
+  list-style-type: none;
+
+  li {
+    display: inline-block;
+    padding: 4px 6px;
+    margin: 8px 0 0;
+    vertical-align: bottom;
+    border-bottom: 1px solid $color-on-background;
+    cursor: pointer;
+    @include transition(padding-bottom 0.2s ease-out, margin-top 0.2s ease-out);
+
+    &.active {
+      padding-bottom: 12px;
+      margin-top: 0;
+      color: $color-accent;
+      border-color: $color-accent;
+    }
+  }
+}
+
 // Pseudo-border(-top/-bottom) that expands and contracts from the center
 @mixin shutter-border-horizontal($height, $top, $width: 0) {
   content: "";
