--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -6,8 +6,12 @@
   &-content {
     margin: 120px 24vw;
 
-    @include breakpoint(600px){
-      margin: 60px 5vw;
+    @include breakpoint(1200px) {
+      margin: 60px 14vw;
+    }
+
+    @include breakpoint(600px) {
+      margin: 60px 4vw;
     }
   }
 
@@ -26,7 +30,7 @@
       max-width: 320px;
       margin-left: 52px;
 
-      @include breakpoint($breakpoint){
+      @include breakpoint($breakpoint) {
         width: 80%;
         margin-left: 0;
         margin-bottom: 16px;
@@ -35,17 +39,21 @@
   }
 
   #experience {
+    $breakpoint: 840px;
+
     margin-top: 100px;
 
     &-content {
-      position: relative;
       display: flex;
+
+      @include breakpoint($breakpoint) {
+        display: block;
+      }
     }
 
     #timeline {
       @include no-decoration-ul;
-      height: 400px;
-      min-width: 220px;
+      min-width: 200px;
       margin: 0 12px;
       border-left: 1px solid $color-on-background;
 
@@ -68,15 +76,31 @@
           border-radius: 50%;
           @include transition(left 0.2s ease-in-out);
         }
+
+        &.active {
+          margin-left: 16px;
+          color: $color-accent;
+
+          &:before {
+            border-color: $color-accent;
+            left: -20px;
+          }
+        }
       }
 
-      .active {
-        margin-left: 16px;
-        color: $color-accent;
+      // When screen is smaller than breakpoint (750px), then timeline moves to the top
+      @include breakpoint($breakpoint) {
+        @include horizontal-selector;
+        border-left: 0;
 
-        &:before {
-          border-color: $color-accent;
-          left: -20px;
+        li {
+          &:before {
+            display: none;
+          }
+
+          &.active {
+            margin-left: 0;
+          }
         }
       }
     }
