--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -8,7 +8,7 @@
   background-color: $color-base;
 
   #background-image {
-    @include absolute-center;
+    @extend %absolute-center;
     height: 85vw;
     width: 85vw;
     max-height: 750px;
@@ -26,7 +26,7 @@
   }
 
   #greeting {
-    @include absolute-center;
+    @extend %absolute-center;
     width: 75%;
     max-width: 420px;
     text-align: center;
