--- a/src/scss/pages/_not-found.scss
+++ b/src/scss/pages/_not-found.scss
@@ -3,7 +3,7 @@
 // ---------------------------------------------------------------------------
 
 #not-found {
-  @include absolute-center;
+  @extend %absolute-center;
   text-align: center;
 
   #code {
