--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 
 @import "base/container";
 @import "base/elements";
+@import "base/class";
 @import "base/typeface";
 @import "base/animation";
 @import "base/transition";
