Moved appropriates elements to elements file

--- a/src/scss/base/_elements.scss
+++ b/src/scss/base/_elements.scss
@@ -2,6 +2,30 @@
 // Contains basic styles for the base elements
 // ---------------------------------------------------------------------------
 
+// Unordered lists
 ul {
   margin: 0;
+}
+
+// Paragraphs
+p {
+  margin: 0;
+}
+
+// Links
+a {
+  text-decoration: none;
+  @include transition(text-shadow 0.2s);
+
+  &:link {
+    color: $color-accent;
+  }
+
+  &:visited {
+    color: $color-accent-dark;
+  }
+
+  &:hover {
+    @extend %neon-text;
+  }
 }
