--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,7 +5,7 @@
 @import "abstract/mixins";
 @import "abstract/placeholders";
 
-@import "base/elements";
+@import "base/element";
 @import "base/class";
 @import "base/typeface";
 @import "base/animation";
