--- a/src/scss/pages/_not-found.scss
+++ b/src/scss/pages/_not-found.scss
@@ -3,8 +3,10 @@
 // ---------------------------------------------------------------------------
 
 #not-found {
-  @extend %absolute-center;
-  text-align: center;
+  &-content {
+    @extend %absolute-center;
+    text-align: center;
+  }
 
   #code {
     @include text($heading-font-family, 216px, 400, 1.2, -0.5px);
