--- a/src/scss/base/_typeface.scss
+++ b/src/scss/base/_typeface.scss
@@ -14,6 +14,7 @@
 ) {
   margin: 0;
   font-family: $font-family;
+  font-size: $font-size;    // Fallback if rem is not supported
   font-size: calculateRem($font-size);
   font-weight: $font-weight;
   line-height: $line-height;
