--- a/src/scss/base/_element.scss
+++ b/src/scss/base/_element.scss
@@ -4,12 +4,12 @@
 
 // Unordered lists
 ul {
-  margin: 0;
+  @extend %no-whitespace;
 }
 
 // Paragraphs
 p {
-  margin: 0;
+  @extend %no-whitespace;
 }
 
 // Links
