--- a/src/scss/abstract/_variables.scss
+++ b/src/scss/abstract/_variables.scss
@@ -3,10 +3,15 @@
 // ---------------------------------------------------------------------------
 
 // Colors
-$color-accent: #00acff;
-$color-accent-light: #51c5f3;
-$color-accent-dark: #008bce;
-$color-on-accent: black;
+$color-primary: #00acff;
+$color-primary-light: #51c5f3;
+$color-primary-dark: #008bce;
+$color-on-primary: black;
+
+$color-secondary: #fc6097;
+$color-secondary-light: #ff94c8;
+$color-secondary-dark: #c52869;
+$color-on-secondary: black;
 
 $color-background: white;
 $color-on-background: #161616;
