--- a/src/scss/base/_class.scss
+++ b/src/scss/base/_class.scss
@@ -27,8 +27,8 @@ ul.horizontal-selector {
     &.active {
       padding-bottom: 12px;
       margin-top: 0;
-      color: $color-accent;
-      border-color: $color-accent;
+      color: $color-primary;
+      border-color: $color-primary;
     }
   }
 }
