--- a/src/scss/base/_typeface.scss
+++ b/src/scss/base/_typeface.scss
@@ -88,5 +88,5 @@ h4 {
 
 // Neon text
 %neon-text {
-  text-shadow: 0 0 2px $color-accent, 0 0 1px $color-accent-dark;
+  text-shadow: 0 0 2px $color-primary, 0 0 1px $color-primary-dark;
 }
