--- a/src/scss/pages/_not-found.scss
+++ b/src/scss/pages/_not-found.scss
@@ -10,7 +10,7 @@
 
   #code {
     @include text($heading-font-family, 216px, 400, 1.2, -0.5px);
-    @include glitch-text($color-accent, $color-background, 28px);
+    @include glitch-text($color-primary, $color-background, 28px);
   }
 
   #message {
