--- a/src/scss/abstract/_placeholders.scss
+++ b/src/scss/abstract/_placeholders.scss
@@ -16,7 +16,7 @@
 }
 
 // Creates a neon box-shadow around the element
-%neon-box-shadow {
-  box-shadow: 0 0 5px $color-primary, 0 0 10px $color-primary-dark, 0 0 2px $color-primary, inset 0 0 5px $color-primary,
-    inset 0 0 10px $color-primary-dark, inset 0 0 2px $color-primary;
+@mixin neon-box-shadow($color, $color-dark) {
+  box-shadow: 0 0 5px $color, 0 0 10px $color-dark, 0 0 2px $color, inset 0 0 5px $color,
+    inset 0 0 10px $color-dark, inset 0 0 2px $color;
 }
