--- a/src/scss/base/_typeface.scss
+++ b/src/scss/base/_typeface.scss
@@ -87,6 +87,6 @@ h4 {
 }
 
 // Neon text
-%neon-text {
-  text-shadow: 0 0 2px $color-primary, 0 0 1px $color-primary-dark;
+@mixin neon-text($color, $color-dark) {
+  text-shadow: 0 0 2px $color, 0 0 1px $color-dark;
 }
