--- a/src/scss/base/_typeface.scss
+++ b/src/scss/base/_typeface.scss
@@ -62,7 +62,7 @@ h4 {
   position: absolute;
   white-space: nowrap;
   clip: rect(0, 900px, 0, 0);
-  animation: glitch-text-animation 3s infinite alternate-reverse;
+  @include animation(glitch-text-animation 3s infinite alternate-reverse);
 }
 
 @mixin glitch-text($color, $background-color, $top-padding: 0, $left-padding: 0, $offset: 1px) {
