Removed underline from header logo

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -29,6 +29,7 @@ header {
   #logo {
     display: block;
     height: 42px;
+    cursor: pointer;
 
     @include breakpoint($breakpoint-small) {
       float: left;
