Added no-wrap to a e s t h e t i c

--- a/src/scss/base/_class.scss
+++ b/src/scss/base/_class.scss
@@ -2,6 +2,11 @@
 // Contains basic classes
 // ---------------------------------------------------------------------------
 
+// Keep all words on same line
+.no-wrap{
+  white-space: nowrap;
+}
+
 // Unordered list with no decoration
 ul.no-decoration {
   @extend %no-whitespace;
